Actualización de rutas y corrección ortográfica

--- a/app.html
+++ b/app.html
@@ -266,7 +266,7 @@
 					<br>
 				</div>
 				<ol class="order">
-					<li>Seleccione un deparamento de la lista del menú lateral</li>
+					<li>Seleccione un departamento de la lista del menú lateral</li>
 					<li>La lista de museos se encuentra de acuerdo a los distritos de cada provincia del departamento seleccionado</li>
 					<li>Seleccione un distrito</li>
 				</ol>
@@ -370,7 +370,7 @@
 				<header>Aplicación</header>
 				<ul>
 					<li>
-						<p><a target="_blank" href="#">Proyecto en GitHub</a>.</p>
+						<p><a target="_blank" href="https://github.com/angelfqc/museaMoz">Proyecto en GitHub</a>.</p>
 					</li>
 				</ul>
 			</div>
