--- a/index.html
+++ b/index.html
@@ -2,28 +2,415 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>museaMoz</title>
-	<script>
-		// Trun it to false to always install 'normal' package
-		var supportHIDPI = false;
-		var isFFOS = ("mozApps" in navigator && navigator.userAgent.search("Mobile") != -1);
+	<!-- Building blocks -->
+	<link rel="stylesheet" href="style/action_menu.css">
+	<link rel="stylesheet" href="style/buttons.css">
+	<link rel="stylesheet" href="style/confirm.css">
+	<link rel="stylesheet" href="style/edit_mode.css">
+	<link rel="stylesheet" href="style/headers.css">
+	<link rel="stylesheet" href="style/input_areas.css">
+	<link rel="stylesheet" href="style/status.css">
+	<link rel="stylesheet" href="style/switches.css">
+	<link rel="stylesheet" href="style_unstable/drawer.css">
+	<link rel="stylesheet" href="style_unstable/lists.css">
+	<link rel="stylesheet" href="style_unstable/progress_activity.css">
+	<link rel="stylesheet" href="style_unstable/scrolling.css">
+	<link rel="stylesheet" href="style_unstable/seekbars.css">
+	<link rel="stylesheet" href="style_unstable/tabs.css">
+	<link rel="stylesheet" href="style_unstable/toolbars.css">
 
-		if ( isFFOS ) {
-			var manifestUrl = 'http://buildingfirefoxos.github.io/Building-Blocks/package/package.manifest';
-			var req = navigator.mozApps.installPackage(manifestUrl);
-			req.onsuccess = function() {
-				console.log(this.result.origin);
-			};
-			req.onerror = function() {
-				console.log(this.error.name);
-			};
+	<!-- Icons -->
+	<link rel="stylesheet" href="icons/styles/action_icons.css">
+	<link rel="stylesheet" href="icons/styles/media_icons.css">
+	<link rel="stylesheet" href="icons/styles/comms_icons.css">
+	<link rel="stylesheet" href="icons/styles/settings_icons.css">
 
-		} else {
-			window.location.href = "app.html"
+	<!-- Transitions -->
+	<link rel="stylesheet" href="transitions.css">
+	
+	<!-- Util CSS: some extra tricks -->
+	<link rel="stylesheet" href="util.css">
+	<link rel="stylesheet" href="fonts.css">
+
+	<!-- Additional markup to make Building Blocks kind of cross browser -->
+	<link rel="stylesheet" href="cross_browser.css">
+
+	<style>
+		#index {
+			height: 100%;
+		}
+		[data-position="right"] {
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			transform: translateX(100%);
+			-webkit-transform: translateX(100%);
+			z-index: 15;
+			z-index: 100; /* -> drawer */
+		}
+		section[role="region"][data-position="right"] {
+			position: absolute;
+		}
+		[data-position="right"].current {
+			animation: rightToCurrent 0.4s forwards;
+			-webkit-animation: rightToCurrent 0.4s forwards;
+		}
+		[data-position="right"].right {
+			animation: currentToRight 0.4s forwards;
+			-webkit-animation: currentToRight 0.4s forwards;
+		}
+		[data-position="current"].left {
+			animation: currentToLeft 0.4s forwards;
+			-webkit-animation: currentToLeft 0.4s forwards;
+		}
+		[data-position="current"].current {
+			animation: leftToCurrent 0.4s forwards;
+			-webkit-animation: leftToCurrent 0.4s forwards;
+		}
+		[data-position="back"] {
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			z-index: -1;
+			opacity: 0;
+			/* z-index: 100; -> drawer */
+		}
+		[data-position="back"].fade-in {
+			z-index: 120;
+			animation: fadeIn 0.2s forwards;
+			-webkit-animation: fadeIn 0.2s forwards;
+		}
+		[data-position="back"].fade-out {
+			animation: fadeOut 0.2s forwards;
+			-webkit-animation: fadeOut 0.2s forwards;
 		}
 
-	</script>
+		[data-position="edit-mode"] {
+			position: absolute;
+			top: -5rem;
+			left: 0;
+			right: 0;
+			bottom: -7rem;
+			z-index: -1;
+			opacity: 0;
+			transition: all 0.3s ease;
+		}
+		[data-position="edit-mode"].edit {
+			position: absolute;
+			top: 0;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			z-index: 120;
+			opacity: 1;
+		}
+
+		/* Headers */
+		#headers section[role="region"] {
+			margin-bottom: 1.5rem;
+		}
+		#headers section[role="region"]:not(#drawer) {
+			display: inline;
+		}
+		#headers article header:first-child {
+			margin-top: 1.5rem;
+		}
+		#headers section[role="region"] header h2 {
+			margin: 0 0 1.5rem 0;
+		}
+
+		/* Lists */
+		/* to avoid double background effect on press */
+		[data-type=list] li>a:active { 
+			background-color: transparent;
+		}
+
+		/* Drawer */
+		section[role="region"]:not(#drawer) {
+			transition: none;
+			left: 0;
+			z-index: 0;
+			padding-left: 0;
+		}
+		section[role="region"]:not(#drawer) > header:first-child {
+			margin-left: 0;
+		}
+		section[role="region"]:not(#drawer) > header:first-child h1 {
+			margin-left: 3rem;
+		}
+		section[role="region"]#drawer > header:first-child h1 {
+			margin-left: 4.5rem;
+		}
+		section[role="region"]:not(#drawer) > header:first-child > a {
+			width: 5rem;
+		}
+		section[role="region"]#drawer > header:first-child > a .icon {
+			width: 3.5rem;
+		}
+		section[data-type="sidebar"] + section[role="region"] > header:first-child > button, 
+		section[data-type="sidebar"] + section[role="region"] > header:first-child > a {
+			background-position: 3.5rem center;
+		}
+		section[role="region"]:not(#drawer) > header:first-child > a .icon:after {
+			width: 2rem;
+		}
+		section[role="region"]#drawer > header:first-child > a .icon:after {
+			width: 3.5rem;
+		}
+
+		/* Switches */
+		#switches label:last-child {
+			margin-left: 2rem;  
+		}
+
+		/* Scrolling */
+		nav[data-type="scrollbar"] {
+			padding-top: 1rem;
+		}
+		nav[data-type="scrollbar"] p {
+			opacity: 1;
+		}
+
+		/* Seek bars */
+		div[role="slider"] > label.icon {
+			background: no-repeat right top;
+			background-size: 3rem auto;
+		}
+		
+		/* Tabs */
+		#tabs .content {
+			padding: 0;
+		}
+		#tabs .content .content {
+			padding: 1.5rem 3rem;
+		}
+
+		/* Filters */
+		[role="tablist"][data-type="filter"] {
+			margin-bottom: 2rem;
+		}
+
+		.bottom[role="tablist"][data-type="filter"] {
+			bottom: auto;
+		}
+
+		/* Device rotation */
+		.landscape section[role="region"]#drawer > header:first-child {
+			background: green;
+		}
+
+		/* Custom */
+		.texto-completo li {
+			height: auto;
+		}
+		.texto-completo li > a {
+			height: auto;
+			padding-bottom: 1rem;
+		}
+		.texto-completo li p {
+			white-space: normal;
+		}
+		.texto-completo li p:only-child, .texto-completo li p:first-of-type:last-of-type {
+			line-height: 3rem;
+		}
+		.texto-completo li p:nth-child(2) {
+			padding-bottom: 1rem;
+		}
+		section[role="region"] header h2 {
+			font-size: 2.5rem;
+			line-height: 3.5rem;
+		}
+		ol.order li {
+			list-style: decimal;
+			list-style-position: outside;
+			margin-left: 2rem;
+		}
+	</style>
 </head>
 <body>
+	<section id="index" data-position="current">
+		<section data-type="sidebar">
+			<header>
+				<h1>Departamentos</h1>
+			</header>
+			<nav>
+				<ul id="lista-dptos"></ul>
+				<h2>&nbsp;</h2>
+				<ul>
+					<li><a href="#" id="btn-to-about">Acerca de</a></li>
+				</ul>
+			</nav>
+		</section>
+
+		<section id="drawer" role="region">
+			<header class="fixed">
+				<a href="#"><span class="icon icon-menu">hide sidebar</span></a>
+				<a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
+				<h1>museaMoz</h1>
+			</header>
+			<article class="content scrollable header">
+				<header>
+					<h2>Guía de museos del Perú</h2>
+				</header>
+				<p class="micro">Nota:</p>
+				<p class="small">Por el momento solo se muestra información de los museos del departamento de Lambayeque.</p>
+				<div data-type="list">
+					<header>Instrucciones</header>
+					<br>
+				</div>
+				<ol class="order">
+					<li>Seleccione un departamento de la lista del menú lateral</li>
+					<li>La lista de museos se encuentra de acuerdo a los distritos de cada provincia del departamento seleccionado</li>
+					<li>Seleccione un distrito</li>
+				</ol>
+				<br><br>
+			</article>
+		</section>
+	</section>
+
+	<!--···························· Departamento ····························-->
+	<section role="region" id="dpto" data-position="right">
+		<header class="fixed">
+			<a id="btn-dpto-back" href="#"><span class="icon icon-back">back</span></a>
+			<h1>museaMoz</h1>
+		</header>
+
+		<article class="content scrollable header">
+			<header><h2 id="dpto-nombre"></h2></header>
+			<div data-type="list" id="lista-provs">
+			</div>
+		</article>
+	</section>
+
+	<!--···························· Distrito ····························-->
+	<section role="region" id="dist" data-position="right">
+		<header class="fixed">
+			<a id="btn-dist-back" href="#"><span class="icon icon-back">back</span></a>
+			<h1>museaMoz</h1>
+		</header>
+
+		<article class="content scrollable header">
+			<header><h2 id="dist-nombre">Museos de <em></em></h2></header>
+			<div data-type="list">
+				<ul id="lista-museos" class="texto-completo"></ul>
+			</div>
+		</article>
+	</section>
+
+	<!--···························· Museo ····························-->
+	<section role="region" id="museo" data-position="right">
+		<header class="fixed">
+			<a id="btn-museo-back" href="#"><span class="icon icon-back">back</span></a>
+			<h1>museaMoz</h1>
+		</header>
+
+		<article class="content scrollable header">
+			<header><h2 id="mus-nombre"></h2></header>
+			<div data-type="list">
+				<header>Colección</header>
+				<ul>
+					<li><p id="mus-coleccion"></p></li>
+				</ul>
+			</div>
+			<div id="mus-descripcion"></div>
+			<div data-type="list">
+				<header>Ubicación</header>
+				<ul class="texto-completo">
+					<li>
+						<p>Dirección</p>
+						<p id="mus-direccion"></p>
+					</li>
+					<li>
+						<p>Distrito</p>
+						<p id="mus-distrito"></p>
+					</li>
+					<li>
+						<p>Provincia</p>
+						<p id="mus-provincia"></p>
+					</li>
+					<li>
+						<p>Departamento</p>
+						<p id="mus-departamento"></p>
+					</li>
+				</ul>
+				<header>Atención</header>
+				<ul id="mus-atencion"></ul>
+				<header>Contacto</header>
+				<ul id="mus-contacto"></ul>
+			</div>
+		</article>
+	</section>
+
+	<!--···························· About ····························-->
+	<section role="region" id="about" data-position="right">
+		<header class="fixed">
+			<a id="btn-about-back" href="#"><span class="icon icon-back">back</span></a>
+			<h1>Acerca de</h1>
+		</header>
+
+		<article class="content scrollable header">
+			<header><h2>museaMoz</h2></header>
+			<p>La información acerca de los museos ha sido obtenida de la Guía de Museos del Perú (segunda edición, 2012) del <a target="_blank" href="http://www.mcultura.gob.pe">Ministerio de Cultura</a>.</p>
+			<p>Los horarios de atención son referenciales y sujetos a cambios.</p>
+			<div data-type="list">
+				<header>Desarrollador</header>
+				<ul>
+					<li>
+						<p><a target="_blank" href="https://mozillians.org/es/u/angelfqc/">Angel Fernando Quiroz Campos</a></p>
+						<p><a target="_blank" href="http://twitter.com/AngelFQC">@AngelFQC</a></p>
+					</li>
+				</ul>
+				<header>Aplicación</header>
+				<ul>
+					<li>
+						<p><a target="_blank" href="https://github.com/angelfqc/museaMoz">Proyecto en GitHub</a>.</p>
+					</li>
+				</ul>
+			</div>
+		</article>
+	</section>
+
+
+	<script type="text/javascript" defer src="js/status.js"></script>
+	<script type="text/javascript" defer src="js/seekbars.js"></script>
+
+	<script type="text/javascript" defer src="js/data.js"></script>
+	<script type="text/javascript" defer src="js/app.js"></script>
+
+	<script>
+		var mobile = (navigator.userAgent.search("Mobile") != -1);
+		if ( mobile ) {
+			//Let's reduce font-size when in landscape  
+			//fs: current font-size
+			var fs = parseInt(window.getComputedStyle(document.documentElement).getPropertyValue( 'font-size' ), 10);
+			var mql = window.matchMedia("(orientation: portrait)");
+
+			if(mql.matches) { //portrait
+				document.documentElement.style.fontSize = fs + 'px';
+				document.body.classList.remove('landscape');
+			} else { // landscape
+				document.documentElement.style.fontSize = fs * 0.7 + 'px';
+				document.body.classList.add('landscape');
+			}
+
+			mql.addListener(function(m) {
+				if(m.matches) { //portrait
+					document.documentElement.style.fontSize = fs + 'px';
+					document.body.classList.remove('landscape');
+				}
+				else { //landscape
+					document.documentElement.style.fontSize = fs * 0.7 + 'px';
+					document.body.classList.add('landscape');
+				}
+			});
+		}
+	</script>
 </body>
 </html>
