Mejoras en legibilidad en ubicación y contacto de museos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>museaMoz</title>
 	<!-- Building blocks -->
@@ -260,7 +259,7 @@
 					<h2>Guía de museos del Perú</h2>
 				</header>
 				<p class="micro">Nota:</p>
-				<p class="small">Por el momento solo se muestra información de los museos del departamento de Lambayeque.</p>
+				<p class="small">Por el momento solo se muestra información de los museos del departamento de Lambayeque y Lima.</p>
 				<div data-type="list">
 					<header>Instrucciones</header>
 					<br>
@@ -283,7 +282,7 @@
 		</header>
 
 		<article class="content scrollable header">
-			<header><h2 id="dpto-nombre"></h2></header>
+			<header><h2 id="dpto-nombre">Departamento de <em></em></h2></header>
 			<div data-type="list" id="lista-provs">
 			</div>
 		</article>
@@ -297,7 +296,7 @@
 		</header>
 
 		<article class="content scrollable header">
-			<header><h2 id="dist-nombre">Museos de <em></em></h2></header>
+			<header><h2 id="dist-nombre">Distrito de <em></em></h2></header>
 			<div data-type="list">
 				<ul id="lista-museos" class="texto-completo"></ul>
 			</div>
@@ -324,20 +323,20 @@
 				<header>Ubicación</header>
 				<ul class="texto-completo">
 					<li>
-						<p>Dirección</p>
 						<p id="mus-direccion"></p>
+						<p>Dirección</p>
 					</li>
 					<li>
-						<p>Distrito</p>
 						<p id="mus-distrito"></p>
+						<p>Distrito</p>
 					</li>
 					<li>
-						<p>Provincia</p>
 						<p id="mus-provincia"></p>
+						<p>Provincia</p>
 					</li>
 					<li>
-						<p>Departamento</p>
 						<p id="mus-departamento"></p>
+						<p>Departamento</p>
 					</li>
 				</ul>
 				<header>Atención</header>
@@ -360,11 +359,13 @@
 			<p>La información acerca de los museos ha sido obtenida de la Guía de Museos del Perú (segunda edición, 2012) del <a target="_blank" href="http://www.mcultura.gob.pe">Ministerio de Cultura</a>.</p>
 			<p>Los horarios de atención son referenciales y sujetos a cambios.</p>
 			<div data-type="list">
-				<header>Desarrollador</header>
+				<header></aside>Créditos</header>
 				<ul>
 					<li>
 						<p><a target="_blank" href="https://mozillians.org/es/u/angelfqc/">Angel Fernando Quiroz Campos</a></p>
-						<p><a target="_blank" href="http://twitter.com/AngelFQC">@AngelFQC</a></p>
+					</li>
+					<li>
+						<p><a target="_blank" href="https://mozillians.org/es/u/juaneladio/">Juan Eladio Sanchez Rosas</a></p>
 					</li>
 				</ul>
 				<header>Aplicación</header>
