--- a/index.html
+++ b/index.html
@@ -362,10 +362,13 @@
 				<header></aside>Créditos</header>
 				<ul>
 					<li>
-						<p><a target="_blank" href="https://mozillians.org/es/u/angelfqc/">Angel Fernando Quiroz Campos</a></p>
+						<p><a target="_blank" href="https://github.com/AngelFQC">AngelFQC</a></p>
 					</li>
 					<li>
-						<p><a target="_blank" href="https://mozillians.org/es/u/juaneladio/">Juan Eladio Sanchez Rosas</a></p>
+						<p><a target="_blank" href="https://github.com/juaneladio">juaneladio</a></p>
+					</li>
+					<li>
+						<p><a target="_blank" href="https://github.com/Diavolo">Diavolo</a></p>
 					</li>
 				</ul>
 				<header>Aplicación</header>
