Simplificación de listado de Dirección de un museo.

--- a/index.html
+++ b/index.html
@@ -324,19 +324,7 @@
 				<ul class="texto-completo">
 					<li>
 						<p id="mus-direccion"></p>
-						<p>Dirección</p>
-					</li>
-					<li>
-						<p id="mus-distrito"></p>
-						<p>Distrito</p>
-					</li>
-					<li>
-						<p id="mus-provincia"></p>
-						<p>Provincia</p>
-					</li>
-					<li>
-						<p id="mus-departamento"></p>
-						<p>Departamento</p>
+						<p id="mus-distritopd"></p>
 					</li>
 				</ul>
 				<header>Atención</header>
