Actualizada la lista de departamentos disponibles

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
 					<h2>Guía de museos del Perú</h2>
 				</header>
 				<p class="micro">Nota:</p>
-				<p class="small">Por el momento solo se muestra información de los museos del departamento de Lambayeque y Lima.</p>
+				<p class="small">Por el momento solo se muestra información de los museos de los departamentos de Amazonas, Cusco, Lambayeque, Lima e Ica.</p>
 				<div data-type="list">
 					<header>Instrucciones</header>
 					<br>
