--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>museaMoz</title>
 	<!-- Building blocks -->
@@ -203,7 +202,7 @@
 
 		/* Device rotation */
 		.landscape section[role="region"]#drawer > header:first-child {
-			background: green;
+			/* background: green; */
 		}
 
 		/* Custom */
@@ -260,7 +259,7 @@
 					<h2>Guía de museos del Perú</h2>
 				</header>
 				<p class="micro">Nota:</p>
-				<p class="small">Por el momento solo se muestra información de los museos del departamento de Lambayeque.</p>
+				<p class="small">Por el momento solo se muestra información de los museos de los departamentos de Amazonas, Cusco, Lambayeque, Lima e Ica.</p>
 				<div data-type="list">
 					<header>Instrucciones</header>
 					<br>
@@ -283,7 +282,7 @@
 		</header>
 
 		<article class="content scrollable header">
-			<header><h2 id="dpto-nombre"></h2></header>
+			<header><h2 id="dpto-nombre">Departamento de <em></em></h2></header>
 			<div data-type="list" id="lista-provs">
 			</div>
 		</article>
@@ -297,7 +296,7 @@
 		</header>
 
 		<article class="content scrollable header">
-			<header><h2 id="dist-nombre">Museos de <em></em></h2></header>
+			<header><h2 id="dist-nombre">Distrito de <em></em></h2></header>
 			<div data-type="list">
 				<ul id="lista-museos" class="texto-completo"></ul>
 			</div>
@@ -324,26 +323,16 @@
 				<header>Ubicación</header>
 				<ul class="texto-completo">
 					<li>
-						<p>Dirección</p>
 						<p id="mus-direccion"></p>
-					</li>
-					<li>
-						<p>Distrito</p>
-						<p id="mus-distrito"></p>
-					</li>
-					<li>
-						<p>Provincia</p>
-						<p id="mus-provincia"></p>
-					</li>
-					<li>
-						<p>Departamento</p>
-						<p id="mus-departamento"></p>
+						<p id="mus-distritopd"></p>
 					</li>
 				</ul>
 				<header>Atención</header>
-				<ul id="mus-atencion"></ul>
-				<header>Contacto</header>
-				<ul id="mus-contacto"></ul>
+				<ul id="mus-atencion" class="texto-completo"></ul>
+				<div id="mus-contacto">
+					<header>Contacto</header>
+					<ul id="mus-detail-contacto"></ul>
+				</div>
 			</div>
 		</article>
 	</section>
@@ -360,11 +349,16 @@
 			<p>La información acerca de los museos ha sido obtenida de la Guía de Museos del Perú (segunda edición, 2012) del <a target="_blank" href="http://www.mcultura.gob.pe">Ministerio de Cultura</a>.</p>
 			<p>Los horarios de atención son referenciales y sujetos a cambios.</p>
 			<div data-type="list">
-				<header>Desarrollador</header>
+				<header></aside>Créditos</header>
 				<ul>
 					<li>
-						<p><a target="_blank" href="https://mozillians.org/es/u/angelfqc/">Angel Fernando Quiroz Campos</a></p>
-						<p><a target="_blank" href="http://twitter.com/AngelFQC">@AngelFQC</a></p>
+						<p><a target="_blank" href="https://github.com/AngelFQC">AngelFQC</a></p>
+					</li>
+					<li>
+						<p><a target="_blank" href="https://github.com/juaneladio">juaneladio</a></p>
+					</li>
+					<li>
+						<p><a target="_blank" href="https://github.com/Diavolo">Diavolo</a></p>
 					</li>
 				</ul>
 				<header>Aplicación</header>
