Solución del issue #7
Issue #7: Validar existencia de datos en Contacto

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 		/* Device rotation */
 		.landscape section[role="region"]#drawer > header:first-child {
-			background: green;
+			/* background: green; */
 		}
 
 		/* Custom */
@@ -328,9 +328,11 @@
 					</li>
 				</ul>
 				<header>Atención</header>
-				<ul id="mus-atencion"></ul>
-				<header>Contacto</header>
-				<ul id="mus-contacto"></ul>
+				<ul id="mus-atencion" class="texto-completo"></ul>
+				<div id="mus-contacto">
+					<header>Contacto</header>
+					<ul id="mus-contacto-detail"></ul>
+				</div>
 			</div>
 		</article>
 	</section>
