--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no" />
 	<title>museaMoz</title>
 	<!-- Building blocks -->
-	<link rel="stylesheet" href="style/action_menu.css">
+	<!-- <link rel="stylesheet" href="style/action_menu.css">
 	<link rel="stylesheet" href="style/buttons.css">
 	<link rel="stylesheet" href="style/confirm.css">
-	<link rel="stylesheet" href="style/edit_mode.css">
+	<link rel="stylesheet" href="style/edit_mode.css"> -->
 	<link rel="stylesheet" href="style/headers.css">
-	<link rel="stylesheet" href="style/input_areas.css">
+	<!-- <link rel="stylesheet" href="style/input_areas.css">
 	<link rel="stylesheet" href="style/status.css">
-	<link rel="stylesheet" href="style/switches.css">
+	<link rel="stylesheet" href="style/switches.css"> -->
 	<link rel="stylesheet" href="style_unstable/drawer.css">
 	<link rel="stylesheet" href="style_unstable/lists.css">
-	<link rel="stylesheet" href="style_unstable/progress_activity.css">
+	<!-- <link rel="stylesheet" href="style_unstable/progress_activity.css"> -->
 	<link rel="stylesheet" href="style_unstable/scrolling.css">
-	<link rel="stylesheet" href="style_unstable/seekbars.css">
+	<!-- <link rel="stylesheet" href="style_unstable/seekbars.css">
 	<link rel="stylesheet" href="style_unstable/tabs.css">
-	<link rel="stylesheet" href="style_unstable/toolbars.css">
+	<link rel="stylesheet" href="style_unstable/toolbars.css"> -->
 
 	<!-- Icons -->
 	<link rel="stylesheet" href="icons/styles/action_icons.css">
@@ -377,34 +377,5 @@
 
 	<script type="text/javascript" defer src="js/data.js"></script>
 	<script type="text/javascript" defer src="js/app.js"></script>
-
-	<script>
-		var mobile = (navigator.userAgent.search("Mobile") != -1);
-		if ( mobile ) {
-			//Let's reduce font-size when in landscape  
-			//fs: current font-size
-			var fs = parseInt(window.getComputedStyle(document.documentElement).getPropertyValue( 'font-size' ), 10);
-			var mql = window.matchMedia("(orientation: portrait)");
-
-			if(mql.matches) { //portrait
-				document.documentElement.style.fontSize = fs + 'px';
-				document.body.classList.remove('landscape');
-			} else { // landscape
-				document.documentElement.style.fontSize = fs * 0.7 + 'px';
-				document.body.classList.add('landscape');
-			}
-
-			mql.addListener(function(m) {
-				if(m.matches) { //portrait
-					document.documentElement.style.fontSize = fs + 'px';
-					document.body.classList.remove('landscape');
-				}
-				else { //landscape
-					document.documentElement.style.fontSize = fs * 0.7 + 'px';
-					document.body.classList.add('landscape');
-				}
-			});
-		}
-	</script>
 </body>
 </html>
