--- a/index.html
+++ b/index.html
@@ -265,8 +265,10 @@
 						<p id="mus-distritopd"></p>
 					</li>
 				</ul>
-				<header>Atención</header>
-				<ul id="mus-atencion" class="texto-completo"></ul>
+				<div id="mus-atencion">
+					<header>Atención</header>
+					<ul id="mus-atencion-detail" class="texto-completo"></ul>
+				</div>
 				<div id="mus-contacto">
 					<header>Contacto</header>
 					<ul id="mus-contacto-detail"></ul>
@@ -317,6 +319,7 @@
 	<script type="text/javascript" defer src="js/dataAyacucho.js"></script>
 	<script type="text/javascript" defer src="js/dataCajamarca.js"></script>
 	<script type="text/javascript" defer src="js/dataCallao.js"></script>
+	<script type="text/javascript" defer src="js/dataIca.js"></script>
 	<script type="text/javascript" defer src="js/dataLambayeque.js"></script>
 
 	<script type="text/javascript" defer src="js/app.js"></script>
