--- a/index.html
+++ b/index.html
@@ -319,8 +319,11 @@
 	<script type="text/javascript" defer src="js/dataAyacucho.js"></script>
 	<script type="text/javascript" defer src="js/dataCajamarca.js"></script>
 	<script type="text/javascript" defer src="js/dataCallao.js"></script>
+	<script type="text/javascript" defer src="js/dataCusco.js"></script>
 	<script type="text/javascript" defer src="js/dataIca.js"></script>
 	<script type="text/javascript" defer src="js/dataLambayeque.js"></script>
+	<script type="text/javascript" defer src="js/dataLoreto.js"></script>
+	<script type="text/javascript" defer src="js/dataTumbes.js"></script>
 
 	<script type="text/javascript" defer src="js/app.js"></script>
 </body>
