Agregado soporte para costo de entradas; reducción de líneas de código

--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
 	<script type="text/javascript" defer src="js/dataCallao.js"></script>
 	<script type="text/javascript" defer src="js/dataCusco.js"></script>
 	<script type="text/javascript" defer src="js/dataIca.js"></script>
+	<script type="text/javascript" defer src="js/dataLima.js"></script>
 	<script type="text/javascript" defer src="js/dataLambayeque.js"></script>
 	<script type="text/javascript" defer src="js/dataLoreto.js"></script>
 	<script type="text/javascript" defer src="js/dataTumbes.js"></script>
