Soporte de costos agregado a la vista

--- a/index.html
+++ b/index.html
@@ -265,6 +265,8 @@
 						<p id="mus-distritopd"></p>
 					</li>
 				</ul>
+				<header>Costos</header>
+				<ul id="mus-costos-detail"></ul>
 				<div id="mus-atencion">
 					<header>Atención</header>
 					<ul id="mus-atencion-detail" class="texto-completo"></ul>
