--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
 	<script type="text/javascript" defer src="js/dataLima.js"></script>
 	<script type="text/javascript" defer src="js/dataLambayeque.js"></script>
 	<script type="text/javascript" defer src="js/dataLoreto.js"></script>
+	<script type="text/javascript" defer src="js/dataMoquegua.js"></script>
 	<script type="text/javascript" defer src="js/dataTumbes.js"></script>
 
 	<script type="text/javascript" defer src="js/app.js"></script>
