--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>museaMoz</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="building-blocks/layout.css">
         <link rel="stylesheet" href="building-blocks/headers.css">
         <link rel="stylesheet" href="building-blocks/drawer.css">
         <link rel="stylesheet" href="building-blocks/progress_activity.css">
@@ -10,35 +11,27 @@
         <link rel="stylesheet" href="css/index.css">
 
         <script data-main="js/main" src="js/libs/require-min.js"></script>
-
-        <style>
-            html, body {
-                margin: 0;
-                padding: 0;
-                font-size: 10px;
-                background-color: #fff;
-                height: 100%;
-                overflow-x: hidden;
-            }
-
-            section[role="region"] {
-                height: 100%;
-                line-height: 1em;
-                font-size: 2.2rem;
-            }
-
-            div[role="main"] {
-                background: #fff;
-                height: calc(100% - 5rem);
-                overflow: hidden;
-            }
-
-            div[role="main"] p {
-                margin: 2rem 2.5rem;
-            }
-        </style>
     </head>
     <body role="application">
-
+        <section id="index">
+            <section data-type="sidebar">
+                <nav id="sidebar-regions">
+                </nav>
+            </section>
+            <section id="drawer" role="region">
+                <header>
+                    <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
+                    <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
+                    <h1>museaMoz</h1>
+                </header>
+                <div class="vbox" role="main">
+                    <article class="vbox scroll">
+                        <div id="main-content" class="scroll">
+                            <progress></progress>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </section>
     </body>
 </html>
