Simplify Flickr photos list view

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                 </header>
                 <div class="vbox" role="main">
                     <article class="vbox scroll">
+                        <header>
+                            <h2>Guía de museos del Perú</h2>
+                        </header>
                         <div id="main-content" class="scroll">
                             <progress></progress>
                         </div>
