Set Region view

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>museaMoz</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="building-blocks/animations.css">
+        <link rel="stylesheet" href="building-blocks/lists.css">
         <link rel="stylesheet" href="building-blocks/layout.css">
         <link rel="stylesheet" href="building-blocks/headers.css">
         <link rel="stylesheet" href="building-blocks/drawer.css">
@@ -32,6 +34,20 @@
                     </article>
                 </div>
             </section>
+        </section>
+
+        <section id="region" role="region" class="inactive-view">
+            <header>
+                <a href="#"><span class="icon icon-back">Back</span></a>
+                <h1>museaMoz</h1>
+            </header>
+            <div role="main" class="vbox">
+                <header>
+                    <h2>Provincias</h2>
+                </header>
+                <article data-type="list" class="scroll">
+                </article>
+            </div>
         </section>
     </body>
 </html>
