Add museums list

--- a/index.html
+++ b/index.html
@@ -49,5 +49,19 @@
                 </article>
             </div>
         </section>
+
+        <section id="province" role="region" class="inactive-view">
+            <header>
+                <a href="#"><span class="icon icon-back">Back</span></a>
+                <h1>museaMoz</h1>
+            </header>
+            <div role="main" class="vbox">
+                <header>
+                    <h2>Museos</h2>
+                </header>
+                <article data-type="list" class="scroll">
+                </article>
+            </div>
+        </section>
     </body>
 </html>
