Avoid horizontal scroll

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script data-main="js/main" src="js/libs/require-min.js"></script>
     </head>
     <body role="application">
+        <div id="container">
         <section id="index">
             <section data-type="sidebar">
                 <nav id="sidebar-regions">
@@ -63,5 +64,6 @@
                 </article>
             </div>
         </section>
+        </div>
     </body>
 </html>
