--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>museaMoz</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="building-blocks/icons.css">
         <link rel="stylesheet" href="building-blocks/animations.css">
         <link rel="stylesheet" href="building-blocks/lists.css">
         <link rel="stylesheet" href="building-blocks/layout.css">
