Enable meta viewport

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <title>museaMoz</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, user-scalable=no" />
+
         <link rel="stylesheet" href="building-blocks/icons.css">
         <link rel="stylesheet" href="building-blocks/animations.css">
         <link rel="stylesheet" href="building-blocks/lists.css">
