Rename main css file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="building-blocks/tabs.css">
         <link rel="stylesheet" href="building-blocks/progress_activity.css">
 
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/museaMoz.css">
 
         <script data-main="js/main" src="js/libs/require-min.js"></script>
     </head>
