Enable browser navigation forward/backward

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </section>
                 <section id="drawer" role="region">
                     <header>
-                        <a href="#"><span class="icon icon-menu">hide sidebar</span></a>
+                        <a href="javascript:history.back();"><span class="icon icon-menu">hide sidebar</span></a>
                         <a href="#drawer"><span class="icon icon-menu">show sidebar</span></a>
                         <h1>museaMoz</h1>
                     </header>
@@ -43,7 +43,7 @@
 
             <section id="region" role="region" class="inactive-view">
                 <header>
-                    <a href="#"><span class="icon icon-back">Back</span></a>
+                    <a href="javascript:history.back();"><span class="icon icon-back">Back</span></a>
                     <h1>museaMoz</h1>
                 </header>
                 <div role="main" class="vbox">
@@ -57,7 +57,7 @@
 
             <section id="province" role="region" class="inactive-view">
                 <header>
-                    <a href="#"><span class="icon icon-back">Back</span></a>
+                    <a href="javascript:history.back();"><span class="icon icon-back">Back</span></a>
                     <h1>museaMoz</h1>
                 </header>
                 <div role="main" class="vbox">
@@ -71,7 +71,7 @@
 
             <section id="museum" role="region" class="inactive-view">
                 <header>
-                    <a href="#"><span class="icon icon-back">Back</span></a>
+                    <a href="javascript:history.back();"><span class="icon icon-back">Back</span></a>
                     <h1><small>museaMoz</small></h1>
                 </header>
                 <div role="main" class="vbox">
