--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <link rel="stylesheet" href="building-blocks/tabs.css">
         <link rel="stylesheet" href="building-blocks/progress_activity.css">
 
-        <link rel="stylesheet" href="css/museaMoz.css">
+        <link rel="stylesheet" href="museaMoz.css">
 
-        <script data-main="js/main" src="js/libs/require-min.js"></script>
+        <script data-main="main" src="libs/require-min.js"></script>
     </head>
     <body role="application">
         <div id="container">
